# data-viz-tool

./: .gitignore  LICENSE  README.md  animation.py  main.py  main_csv.py  pyproject.toml  read_csv.py  requirements.txt
.github/workflows/: checks.yml
data/: Image_0006_0.tiff.csv
data/csvs/: Image_0000_0.tiff.csv  Image_0001_0.tiff.csv  Image_0002_0.tiff.csv  Image_0003_0.tiff.csv  Image_0004_0.tiff.csv  Image_0005_0.tiff.csv  Image_0006_0.tiff.csv  Image_0007_0.tiff.csv  Image_0008_0.tiff.csv  Image_0009_0.tiff.csv  Image_0010_0.tiff.csv  Image_0011_0.tiff.csv  Image_0012_0.tiff.csv  Image_0013_0.tiff.csv  Image_0014_0.tiff.csv  Image_0015_0.tiff.csv  Image_0016_0.tiff.csv  Image_0017_0.tiff.csv  Image_0018_0.tiff.csv  Image_0019_0.tiff.csv
docs/source/: conf.py  index.rst
example_generate/: ex1_generate_data.py
examples/: animation.py  animation_double.py  copier.py  copy_files.py  ex1_show_side_compare.py  ex2_show_display.py  rendertest.py
src/data-viz-tool/: data-viz-tool.py
src/dataviztool/: __init__.py  cli.py  dataviztool.py  display_options.py  display_tools.py  displayer.py  displayopts.py  double_view.py  graphics.py  logger.py  main_csv.py  read_csv.py  requirements.txt  testing.py  testing2.py  visualiser.py  watcher.py
tests/: test_display_options.py  test_display_tools.py  test_pyvista.py  test_visual.py
